--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,16 @@ node_js:
   - 6
   
 install: npm install
-script: make
+script: make test
+
+compiler: clang-3.6
+env:
+  - CXX=clang-3.6
+addons:
+  apt:
+    sources:
+      - llvm-toolchain-precise-3.6
+      - ubuntu-toolchain-r-test
+    packages:
+      - clang-3.6
+      - g++-4.8
